--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Depot</title>
+    <title>Pragprog Books Online Store</title>
     <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all',
+                            'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'application',
+                            'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
@@ -21,13 +22,24 @@
 
           <%= render_if @cart && @cart.line_items.any?, @cart %>
         </div>
-    
+
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="/questions">Questions</a></li>
           <li><a href="/news">News</a></li>
           <li><a href="/contact">Contact</a></li>
         </ul>
+
+        <% if session[:user_id] %>
+          <nav class="logged_in_nav">
+            <ul>
+              <li><%= link_to 'Orders',   orders_path   %></li>
+              <li><%= link_to 'Products', products_path %></li>
+              <li><%= link_to 'Users',    users_path    %></li>
+              <li><%= button_to 'Logout', logout_path, method: :delete   %></li>
+            </ul>
+          </nav>
+        <% end %>
       </nav>
       <main class='<%= controller.controller_name %>'>
         <%= yield %>
